BIG UPDATE: add penguin icon

--- a/Dataset 02 -  Palmer Penguins.ipynb
+++ b/Dataset 02 -  Palmer Penguins.ipynb
@@ -19,7 +19,7 @@
     "| 22120238  | Nguyễn Minh Nguyên       |\n",
     "| 22120252  | Giang Đức Nhật           |\n",
     "\n",
-    "### ♥️ Dataset 02: Palmer Penguins\n",
+    "### 🐧 Dataset 02: Palmer Penguins\n",
     "</div>"
    ]
   },
